[package]
name = "k210-example"
version = "0.1.0"
authors = ["Chris Hutchinson <chris@cshutchinson.com>"]
edition = "2018"

[features]
maix = []
maixduino = []

[dependencies]
riscv = { git = "https://github.com/rust-embedded/riscv" }
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt" }
k210-hal = { git = "https://github.com/riscv-rust/k210-hal" }
k210-pac = { git = "https://github.com/riscv-rust/k210-pac" }
panic-halt = "0.2.0"